# cakeview

./: CMakeLists.txt  Readme.md
res/: shader_structure.shader
res/fragment_shader/: BoxFaceDepth.fs  Phong.fs  Point.fs  UncoloredPlane.fs  fragment_shader.fs  line.fs
res/vertex_attributes/: Axis.data  BoxFace.data
res/vertex_shader/: Axis.vs  BoxFace.vs  Phong.vs  Plane.vs  Point.vs  line.vs
src/: Buffers.hpp  Camera.hpp  Input.hpp  Light.hpp  Math.hpp  Renderable.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Time.hpp  Utils.hpp  config.h  main.cpp  main_phong.cpp  main_renderer.cpp
